examples/test/testpolicy5718.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5718
  namespace: namespace260
spec:
  podSelector:
    matchLabels:
      key32: value7
      key38: value34
      key13: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value49
      podSelector:
        matchLabels:
          key11: value16
          key17: value25
          key20: value26
